<resources>
    <string name="app_name">SeeTalk</string>
    <string name="clear">Clear</string>
    <string name="lang">Language</string>
    <string name="local">Local</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="text">Text</string>
    <string name="textlarger">x -> X</string>
    <string name="textsmaller">X -> x</string>
    <string name="save">Save Changes</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="listen">Listen</string>
    <string name="saveBuf">Save Buffer</string>

</resources>
